# shifu-ocr

./: .gitignore  AUDIT.md  AUDIT_DEEP.md  AUDIT_ROUND3.md  CLAUDE.md  CLAUDE_ops.md  FEATURES.md  README.md  SHIFU_ARCHITECTURE.md  SPEC.md  UI_PREVIEW.html  app.py  finetune_real.py  firebase.json  generate_pdf.py  index.html  index.js  manifest.json  package-lock.json  package.json  requirements.txt  run_tutor.js  serve.js  server.js  shifu_chatbot.html  solve_arc.js  sw.js  test_arc.py  tutor_run.js  vite.config.js
api/: server.js
app/: chatbot.jsx  engine.jsx  main.jsx
clinical/: confusion.js  corrector.js  numeric.js  safety.js  vocabulary.js
core/: CLAUDE.md  INTEGRATION_GUIDE.js  engine.js  engine_v141.js  engine_v20.js  feedback.js  ingest.js  integration.js  invariance.js  metrics.js  persistence.js  pipeline.js  shifu.js  shifu_api.js  shifu_core.js  shifu_engine.jsx  shifu_package.json  shifu_v2_CLAUDE.md  shifu_v2_design.md  shifu_v2_engine.js  shifu_v2_teacher.js  shifu_v2_tutor.js  teacher.js  trainedLoader.js  trained_model.json  tutor.js
corpus_data/: manifest.json
data/: medical_corpus.js
docs/: philosophy.md
learning/: ablation.js  clinical_weights.js  corpus.js  engine.js  feed_corpus.js  loop.js  medical_corpus.js  scale.js
notebooks/: train_colab.ipynb  train_colab_v2.ipynb  train_colab_v3.ipynb
public/: brain.html  index.html
shifu_neural/: Cargo.toml  pyproject.toml
shifu_neural/src/: arena.rs  field.rs  lib.rs  neuron.rs
shifu_ocr/: __init__.py  accommodation.py  clinical.py  clinical_context.py  codefining.py  coherence.py  (+30 more)
(+79 files in other folders)
